--- a/project/styles/Menu.scss
+++ b/project/styles/Menu.scss
@@ -7,24 +7,24 @@
 	color: white;
 	display: -webkit-flex;
 	padding: 0.5em;
+	-webkit-align-items: baseline;
 
 	h1 {
 		margin: 0 1em 0 0;
 		-webkit-flex: initial;
-		-webkit-align-self: center;
 	}
 
 	ul {
 		margin: 0;
 		padding: 0;
 		-webkit-flex: auto;
-		-webkit-align-self: center;
 	}
 
 	li {
 		display: inline-block;
 		padding: 0.5em;
 		cursor: pointer;
+		@include no-select;
 
 		&:hover {
 			background-color: #666;
